fix z-index issue w/ ShareDialog bg mask

--- a/frontend/src/components/MediaPlayer/ShareDialog.module.scss
+++ b/frontend/src/components/MediaPlayer/ShareDialog.module.scss
@@ -63,6 +63,6 @@
 .bgMask {
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
-  z-index: 1;
+  z-index: 10;
   background-color: rgba(0, 0, 0, 0.4);
 }
